--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #7700ee;
+  background-color: #0f0f0f;
   color: #fff;
   overflow-x: hidden;
 }
@@ -55,6 +55,11 @@ h1 {
   align-content: center;
   display: flex;
   text-align: center;
+  font-size: 1.5rem;
+}
+
+.member-page > h1 {
+  font-size: 3rem;
 }
 
 .member-page > div {
@@ -88,12 +93,13 @@ h1 {
 .member-page form > div {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+  word-wrap: break-word;
 }
 
 .member-page form h5 {
   margin-top: 0;
-  color: #7700ee;
+  color: #50c1e9;
 }
 
 .member-page form .card > div {
@@ -104,19 +110,23 @@ h1 {
 
 .member-page form small {
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 .card {
-  background-color: #fff;
+  background-color: rgb(253, 253, 253);
   padding: 1rem;
   border-radius: 1rem;
   color: #000;
-  box-shadow: 3.1px 6.2px 6.2px hsl(0deg 0% 0% / 0.4);
+  box-shadow: 3.1px 6.2px 6.2px rgba(150, 148, 148, 0.4);
 }
-
+.card input {
+  margin-right: 0.5rem;
+  cursor: pointer;
+}
 button {
   cursor: pointer;
-  background-color: #000;
+  background-color: #50c1e9;
   color: #fff;
   border: none;
   font-weight: bold;
@@ -128,11 +138,11 @@ button {
 }
 
 button:hover {
-  background-color: #121212;
+  background-color: #48a7ca;
 }
 
 button:focus {
-  background-color: #222;
+  background-color: #48a7ca;
 }
 
 button:disabled {
